refactor: simplify the CreateProduct flow in application and infrastructure