@@ -12,39 +12,36 @@ import org.springframework.stereotype.Component;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
 public class ProductPersistenceAdapter implements ProductPersistencePort {
 
     private final JpaProductRepository jpaProductRepository;
+    private final ProductMapper mapper;
 
     @Override
     public Product save(Product product) {
-        ProductEntity entity = ProductMapper.toEntity(product);
+        ProductEntity entity = mapper.toEntity(product);
         ProductEntity savedEntity = jpaProductRepository.save(entity);
-        return ProductMapper.toDomain(savedEntity);
+        return mapper.toDomain(savedEntity);
     }
 
     @Override
     public Optional<Product> findById(UUID id) {
-        return jpaProductRepository.findById(id).map(ProductMapper::toDomain);
+        return jpaProductRepository.findById(id).map(mapper::toDomain);
     }
 
     @Override
     public List<Product> findAll() {
-        return jpaProductRepository.findAll()
-            .stream()
-            .map(ProductMapper::toDomain)
-            .toList();
+        return jpaProductRepository.findAll().stream().map(mapper::toDomain).collect(Collectors.toList());
     }
 
     @Override
     public List<Product> findByStatus(String status) {
         ProductStatus productStatus = ProductStatus.valueOf(status.toUpperCase());
         return jpaProductRepository.findByStatus(productStatus)
-            .stream()
-            .map(ProductMapper::toDomain)
-            .toList();
+            .stream().map(mapper::toDomain).collect(Collectors.toList());
     }
 }
